--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -10,6 +10,8 @@ android {
         targetSdkVersion 25
         versionCode Integer.parseInt(project.VERSION_CODE)
         versionName project.VERSION_NAME
+        vectorDrawables.useSupportLibrary = true
+
     }
     buildTypes {
         release {
@@ -28,8 +30,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:25.2.0'
-    compile 'com.android.support:recyclerview-v7:25.2.0'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:design:25.2.0'
     compile project(':library')
 }
